# diargos

./: Cargo.toml
src/: config.rs  consts.rs  cursor.rs  data.rs  main.rs  model.rs  util.rs
src/views/: field_edit.rs  file_browser.rs  mod.rs  tag_record.rs
