[package]
name = "diargos"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_tree_view = "0.6"
str-macro = "0.1.4"
maplit = "1.0.2"
unicode-width = "*"
clap = "3.0.0-beta.1"
globset = "0.4"
metaflac = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["termion-backend"]
